--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,10 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
+      - name: install bs4 selenium etc
+        run: |
+            sudo pip3 install selenium
+            sudo pip3 install bs4
    
       - name: run the main.py 
         run: python3 ./main.py 
