--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,9 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: install bs4 selenium etc
+    /* - name: install bs4 selenium etc
         run: |
-            sudo pip3 install selenium
-            sudo pip3 install bs4
-   
+            python -V
+            
       - name: run the main.py 
-        run: python3 ./main.py 
+        #run: python3 ./main.py 
