--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-    /* - name: install bs4 selenium etc
-        run: |
-            python -V
+      - name: install bs4 selenium etc
+        run:    python -V
             
       - name: run the main.py 
         #run: python3 ./main.py 
