--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: install bs4 selenium etc
-        run:    python -V
+        run: python -V
             
       - name: run the main.py 
-        #run: python3 ./main.py 
+        run: python3 ./main.py 
