--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       - name: install bs4 selenium etc
         run: |
               python -V
+              pip install requests
               pip3 install BeautifulSoup4
               pip3 install bs4
               pip3 install  selenium
